tests/errors/known_bugs/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_integer.py
# pylint: disable=missing-function-docstring, missing-module-docstring
def compare_is_int_int(a : 'int', b : 'int'):
    return a is b
